# Spot-if-AI

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.mts
sonics-onnx-converter/: README.md  convert_to_onnx.py  predict_onnx.py  predict_original.py  pyproject.toml  utils.py
src/: content_scripts.ts  popup.ts  service_worker.ts
src/lib/: client.ts  components.ts  fetcher.ts  infer_engine.ts  track_handler.ts  utils.ts
src/public/: manifest.json  popup.css  popup.html
